*) added support for static linking on Win32 *) added basic support for building on linux (using cmake) [AS3Plugin not supported yet] *) added macros for loading plugins independently from linking mode (static/dynamic) *) added macros for memory debugging *) added pixel border for cairo shapes painted to atlas texture
*) moved cairo from the core to a seperate plugin (CairoPlugin)

*) fixed vtx::as3::SimpleButton to use correct vtx::Transform getter/setter methods
*) fixed vtx::ogre::Texture to use manual resource loader in case of device loss
*) fixed memleak in vtx::swf::SwfParser when there was no vtx::Keyframe parsed
*) fixed sanity checks for Flash shape debugging code

--- a/plugins/SwfPlugin/scripts/vektrix_SwfPlugin.vcproj
+++ b/plugins/SwfPlugin/scripts/vektrix_SwfPlugin.vcproj
@@ -64,7 +64,7 @@
 				AdditionalDependencies="zlibd.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(ZLIB_HOME)\projects\visualc6\Win32_LIB_Debug&quot;"
+				AdditionalLibraryDirectories="$(ZLIB_HOME)\projects\visualc6\Win32_LIB_$(ConfigurationName)"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -140,7 +140,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="zlib.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(ZLIB_HOME)\projects\visualc6\Win32_LIB_Release&quot;"
+				AdditionalLibraryDirectories="$(ZLIB_HOME)\projects\visualc6\Win32_LIB_$(ConfigurationName)"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
