--- a/demos/Ogre3D/scripts/vektrix_Ogre3D_Demo.vcproj
+++ b/demos/Ogre3D/scripts/vektrix_Ogre3D_Demo.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\lib\include;..\..\..\plugins\OgrePlugin\include;&quot;$(OGRE_HOME)\OgreMain\include&quot;;&quot;$(OGRE_HOME)\Dependencies\include&quot;;&quot;$(OGRE_HOME)\include&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\lib\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;&quot;$(OGRE_HOME)\OgreMain\include&quot;;&quot;$(OGRE_HOME)\Dependencies\include&quot;;&quot;$(OGRE_HOME)\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -123,7 +123,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include;..\..\..\lib\include;..\..\..\plugins\OgrePlugin\include;&quot;$(OGRE_HOME)\OgreMain\include&quot;;&quot;$(OGRE_HOME)\Dependencies\include&quot;;&quot;$(OGRE_HOME)\include&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\lib\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;&quot;$(OGRE_HOME)\OgreMain\include&quot;;&quot;$(OGRE_HOME)\Dependencies\include&quot;;&quot;$(OGRE_HOME)\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
