--- a/lib/scripts/vektrix.vcproj
+++ b/lib/scripts/vektrix.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;&quot;$(CAIRO_HOME)\include\cairo&quot;"
+				AdditionalIncludeDirectories="..\include;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,10 +63,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="cairo.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(CAIRO_HOME)\lib&quot;"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -121,7 +120,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\include;&quot;$(CAIRO_HOME)\include\cairo&quot;"
+				AdditionalIncludeDirectories="..\include;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VEKTRIX_EXPORTS"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -140,9 +139,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="cairo.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(CAIRO_HOME)\lib&quot;"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -289,7 +287,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\include\vtxPrerequesites.h"
+				RelativePath="..\include\vtxPlugin.h"
 				>
 			</File>
 			<File
@@ -409,6 +407,18 @@
 				</File>
 				<File
 					RelativePath="..\include\vtxVector2.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Platforms"
+				>
+				<File
+					RelativePath="..\include\vtxLinux.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\vtxWin32.h"
 					>
 				</File>
 			</Filter>
@@ -753,23 +763,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\vtxAtlasRastarizer.cpp"
+				RelativePath="..\src\vtxRastarizer.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\include\vtxAtlasRastarizer.h"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Render Strategies"
-			>
-			<File
-				RelativePath="..\src\vtxRenderStrategy.cpp"
+				RelativePath="..\include\vtxRastarizer.h"
 				>
 			</File>
 			<File
-				RelativePath="..\include\vtxRenderStrategy.h"
+				RelativePath="..\src\vtxRasterizerManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\include\vtxRasterizerManager.h"
 				>
 			</File>
 		</Filter>
@@ -831,6 +837,14 @@
 		</Filter>
 		<File
 			RelativePath="..\include\vektrix.h"
+			>
+		</File>
+		<File
+			RelativePath="..\include\vtxConfig.h"
+			>
+		</File>
+		<File
+			RelativePath="..\include\vtxPrerequesites.h"
 			>
 		</File>
 	</Files>
