--- a/plugins/OgrePlugin/scripts/vektrix_OgrePlugin.vcproj
+++ b/plugins/OgrePlugin/scripts/vektrix_OgrePlugin.vcproj
@@ -335,6 +335,14 @@
 					Name="Instances"
 					>
 					<File
+						RelativePath="..\src\vtxogreMovableTextBase.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\include\vtxogreMovableTextBase.h"
+						>
+					</File>
+					<File
 						RelativePath="..\src\vtxopMovableEditText.cpp"
 						>
 					</File>
