--- a/plugins/XmlPlugin/scripts/CMakeLists.txt
+++ b/plugins/XmlPlugin/scripts/CMakeLists.txt
@@ -1,10 +1,11 @@
 # include directories
-include_directories (../include) 
-include_directories (../../../lib/include)
-include_directories ($ENV{EXPAT_HOME}/include)
+include_directories (
+../include
+../../../core/include
+)
 
 # library directories
-link_libraries ($ENV{EXPAT_HOME}/lib/libexpat.so)
+#link_libraries ($ENV{EXPAT_HOME}/lib/libexpat.so)
 
 # output directory
 set (LIBRARY_OUTPUT_PATH ../../../bin)
