--- a/demos/Ogre3D/scripts/CMakeLists.txt
+++ b/demos/Ogre3D/scripts/CMakeLists.txt
@@ -1,17 +1,19 @@
-include_directories (../include)
-include_directories (../../../lib/include)
+include_directories (
+../include
+../../../core/include
+../../../plugins/AS3Plugin/include
+../../../plugins/CairoPlugin/include
+../../../plugins/cURLPlugin/include
+../../../plugins/D3D9Plugin/include
+../../../plugins/FreeImgPlugin/include
+../../../plugins/OgrePlugin/include
+../../../plugins/SwfPlugin/include
+../../../plugins/XmlPlugin/include
+$ENV{OGRE_HOME}/include/OGRE
+)
 
-include_directories (../../../plugins/AS3Plugin/include)
-include_directories (../../../plugins/Direct3D9Plugin/include)
-include_directories (../../../plugins/CairoPlugin/include)
-include_directories (../../../plugins/OgrePlugin/include)
-include_directories (../../../plugins/SwfPlugin/include)
-include_directories (../../../plugins/XmlPlugin/include)
-
-include_directories ($ENV{OGRE_HOME}/include/OGRE)
-
-link_libraries ($ENV{OGRE_HOME}/lib/libOgreMain.so)
-link_libraries ($ENV{OIS_HOME}/lib/libOIS.so)
+#link_libraries ($ENV{OGRE_HOME}/lib/libOgreMain.so)
+#link_libraries ($ENV{OIS_HOME}/lib/libOIS.so)
 
 set (EXECUTABLE_OUTPUT_PATH ../../../bin)
 
@@ -21,5 +23,10 @@ add_executable (vektrix_Ogre3D_demo
 
 set_target_properties(vektrix_Ogre3D_demo PROPERTIES PREFIX "")
 
-target_link_libraries (vektrix_Ogre3D_demo vektrix)
+target_link_libraries (
+vektrix_Ogre3D_demo
+vektrix
+OgreMain
+OIS
+)
 
