--- a/demos/Ogre3D/scripts/vektrix_Ogre3D_Demo.vcproj
+++ b/demos/Ogre3D/scripts/vektrix_Ogre3D_Demo.vcproj
@@ -41,10 +41,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\cURLPlugin\include;..\..\..\plugins\D3D9Plugin\include;..\..\..\plugins\FreeImgPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;&quot;$(OGRE_HOME)\include&quot;;&quot;$(OGRE_HOME)\include\OGRE&quot;;&quot;$(OGRE_HOME)\boost_1_42&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -125,6 +126,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\cURLPlugin\include;..\..\..\plugins\D3D9Plugin\include;..\..\..\plugins\FreeImgPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;&quot;$(OGRE_HOME)\include&quot;;&quot;$(OGRE_HOME)\include\OGRE&quot;;&quot;$(OGRE_HOME)\boost_1_42&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
@@ -207,10 +209,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\cURLPlugin\include;..\..\..\plugins\D3D9Plugin\include;..\..\..\plugins\FreeImgPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;&quot;$(OGRE_HOME)\include&quot;;&quot;$(OGRE_HOME)\include\OGRE&quot;;&quot;$(OGRE_HOME)\boost_1_42&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;VTX_STATIC_LIB"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -291,6 +294,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;..\..\..\plugins\AS3Plugin\include;..\..\..\plugins\CairoPlugin\include;..\..\..\plugins\cURLPlugin\include;..\..\..\plugins\D3D9Plugin\include;..\..\..\plugins\FreeImgPlugin\include;..\..\..\plugins\OgrePlugin\include;..\..\..\plugins\SwfPlugin\include;..\..\..\plugins\XmlPlugin\include;&quot;$(OGRE_HOME)\include&quot;;&quot;$(OGRE_HOME)\include\OGRE&quot;;&quot;$(OGRE_HOME)\boost_1_42&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;VTX_STATIC_LIB"
 				RuntimeLibrary="2"
