--- a/plugins/AS3Plugin/scripts/vektrix_AS3Plugin.vcproj
+++ b/plugins/AS3Plugin/scripts/vektrix_AS3Plugin.vcproj
@@ -40,10 +40,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(CASPIN_HOME)\include&quot;;&quot;$(CASPIN_HOME)\tamarin\core&quot;;&quot;$(CASPIN_HOME)\tamarin\vmpi&quot;;&quot;$(CASPIN_HOME)\tamarin\shell&quot;;&quot;$(CASPIN_HOME)\tamarin\platform&quot;;&quot;$(CASPIN_HOME)\tamarin\mmgc&quot;;&quot;$(CASPIN_HOME)\tamarin\eval&quot;;&quot;$(CASPIN_HOME)\tamarin\extensions&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_AS3PLUGIN_EXPORTS;CSP_USE_RUNTIME_DEBUGGER"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -118,6 +119,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(CASPIN_HOME)\include&quot;;&quot;$(CASPIN_HOME)\tamarin\core&quot;;&quot;$(CASPIN_HOME)\tamarin\vmpi&quot;;&quot;$(CASPIN_HOME)\tamarin\shell&quot;;&quot;$(CASPIN_HOME)\tamarin\platform&quot;;&quot;$(CASPIN_HOME)\tamarin\mmgc&quot;;&quot;$(CASPIN_HOME)\tamarin\eval&quot;;&quot;$(CASPIN_HOME)\tamarin\extensions&quot;"
@@ -196,10 +198,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(CASPIN_HOME)\include&quot;;&quot;$(CASPIN_HOME)\tamarin\core&quot;;&quot;$(CASPIN_HOME)\tamarin\vmpi&quot;;&quot;$(CASPIN_HOME)\tamarin\shell&quot;;&quot;$(CASPIN_HOME)\tamarin\platform&quot;;&quot;$(CASPIN_HOME)\tamarin\mmgc&quot;;&quot;$(CASPIN_HOME)\tamarin\eval&quot;;&quot;$(CASPIN_HOME)\tamarin\extensions&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;VTX_STATIC_LIB;CSP_USE_RUNTIME_DEBUGGER"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -219,6 +222,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalOptions="/IGNORE:4221"
 				AdditionalDependencies="caspin_debugger_d.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static_d.lib"
 				AdditionalLibraryDirectories="&quot;$(CASPIN_HOME)\lib&quot;"
@@ -264,6 +268,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(CASPIN_HOME)\include&quot;;&quot;$(CASPIN_HOME)\tamarin\core&quot;;&quot;$(CASPIN_HOME)\tamarin\vmpi&quot;;&quot;$(CASPIN_HOME)\tamarin\shell&quot;;&quot;$(CASPIN_HOME)\tamarin\platform&quot;;&quot;$(CASPIN_HOME)\tamarin\mmgc&quot;;&quot;$(CASPIN_HOME)\tamarin\eval&quot;;&quot;$(CASPIN_HOME)\tamarin\extensions&quot;"
@@ -287,6 +292,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalOptions="/IGNORE:4221"
 				AdditionalDependencies="caspin_debugger.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static.lib"
 				AdditionalLibraryDirectories="&quot;$(CASPIN_HOME)\lib&quot;"
@@ -438,6 +444,10 @@
 					</File>
 					<File
 						RelativePath="..\as3\flash\text\TextFieldType.as"
+						>
+					</File>
+					<File
+						RelativePath="..\as3\flash\text\TextFormat.as"
 						>
 					</File>
 				</Filter>
