--- a/plugins/FreeImgPlugin/scripts/vektrix_FreeImgPlugin.vcproj
+++ b/plugins/FreeImgPlugin/scripts/vektrix_FreeImgPlugin.vcproj
@@ -40,10 +40,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(FREEIMG_HOME)\dist&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_FREEIMGPLUGIN_EXPORTS"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -118,6 +119,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(FREEIMG_HOME)\dist&quot;"
@@ -197,6 +199,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(FREEIMG_HOME)\dist&quot;"
@@ -220,6 +223,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalOptions="/IGNORE:4221"
 				AdditionalDependencies="FreeImage.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static.lib"
 				AdditionalLibraryDirectories="$(FREEIMG_HOME)\dist"
@@ -264,10 +268,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(FREEIMG_HOME)\dist&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;VTX_STATIC_LIB"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -287,6 +292,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalOptions="/IGNORE:4221"
 				AdditionalDependencies="FreeImaged.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static_d.lib"
 				AdditionalLibraryDirectories="$(FREEIMG_HOME)\dist"
