--- a/plugins/SwfPlugin/scripts/vektrix_SwfPlugin.vcproj
+++ b/plugins/SwfPlugin/scripts/vektrix_SwfPlugin.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(ZLIB_HOME)&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(ZLIB_HOME)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_SWFPLUGIN_EXPORTS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -66,7 +66,7 @@
 				AdditionalDependencies="zlibd.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(ZLIB_HOME)\projects\visualc6\Win32_LIB_$(ConfigurationName)"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(ZLIB_HOME)\projects\visualc6\Win32_LIB_$(ConfigurationName)&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -122,7 +122,7 @@
 				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(ZLIB_HOME)&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(ZLIB_HOME)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VEKTRIX_SWFPLUGIN_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -144,7 +144,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="zlib.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(ZLIB_HOME)\projects\visualc6\Win32_LIB_$(ConfigurationName)"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(ZLIB_HOME)\projects\visualc6\Win32_LIB_$(ConfigurationName)&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -200,7 +200,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(ZLIB_HOME)&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(ZLIB_HOME)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;VTX_STATIC_LIB"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -223,7 +223,7 @@
 				Name="VCLibrarianTool"
 				AdditionalDependencies="zlibd.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static_d.lib"
-				AdditionalLibraryDirectories="$(ZLIB_HOME)\projects\visualc6\Win32_LIB_Debug"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(ZLIB_HOME)\projects\visualc6\Win32_LIB_Debug&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -270,7 +270,7 @@
 				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(ZLIB_HOME)&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(ZLIB_HOME)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;VTX_STATIC_LIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -292,7 +292,7 @@
 				Name="VCLibrarianTool"
 				AdditionalDependencies="zlib.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static.lib"
-				AdditionalLibraryDirectories="$(ZLIB_HOME)\projects\visualc6\Win32_LIB_Release"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(ZLIB_HOME)\projects\visualc6\Win32_LIB_Release&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
