--- a/plugins/FreeImgPlugin/scripts/vektrix_FreeImgPlugin.vcproj
+++ b/plugins/FreeImgPlugin/scripts/vektrix_FreeImgPlugin.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(FREEIMG_HOME)\dist&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(FREEIMG_HOME)\dist&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_FREEIMGPLUGIN_EXPORTS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -67,7 +67,7 @@
 				AdditionalDependencies="FreeImaged.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(FREEIMG_HOME)\dist"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(FREEIMG_HOME)\dist&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -122,7 +122,7 @@
 				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(FREEIMG_HOME)\dist&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(FREEIMG_HOME)\dist&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VEKTRIX_FREEIMGPLUGIN_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -145,7 +145,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="FreeImage.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(FREEIMG_HOME)\dist"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(FREEIMG_HOME)\dist&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -202,7 +202,7 @@
 				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(FREEIMG_HOME)\dist&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(FREEIMG_HOME)\dist&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;VTX_STATIC_LIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -226,7 +226,7 @@
 				AdditionalOptions="/IGNORE:4221"
 				AdditionalDependencies="FreeImage.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static.lib"
-				AdditionalLibraryDirectories="$(FREEIMG_HOME)\dist"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(FREEIMG_HOME)\dist&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -270,7 +270,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(FREEIMG_HOME)\dist&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(FREEIMG_HOME)\dist&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;VTX_STATIC_LIB"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -295,7 +295,7 @@
 				AdditionalOptions="/IGNORE:4221"
 				AdditionalDependencies="FreeImaged.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static_d.lib"
-				AdditionalLibraryDirectories="$(FREEIMG_HOME)\dist"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(FREEIMG_HOME)\dist&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
