--- a/plugins/cURLPlugin/scripts/vektrix_cURLPlugin.vcproj
+++ b/plugins/cURLPlugin/scripts/vektrix_cURLPlugin.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(CURL_HOME)\include&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(CURL_HOME)\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;VEKTRIX_CURLPLUGIN_EXPORTS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -66,7 +66,7 @@
 				AdditionalDependencies="libcurld.lib wldap32.lib ws2_32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_d.dll"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(CURL_HOME)\lib\LIB-Debug"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(CURL_HOME)\lib\LIB-Debug&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -121,7 +121,7 @@
 				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(CURL_HOME)\include&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(CURL_HOME)\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;VEKTRIX_CURLPLUGIN_EXPORTS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -143,7 +143,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="libcurl.lib wldap32.lib ws2_32.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(CURL_HOME)\lib\LIB-Release"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(CURL_HOME)\lib\LIB-Release&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -200,7 +200,7 @@
 				AdditionalOptions="/MP"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(CURL_HOME)\include&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(CURL_HOME)\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;VTX_STATIC_LIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -223,7 +223,7 @@
 				AdditionalOptions="/IGNORE:4221 /IGNORE:4006"
 				AdditionalDependencies="libcurl.lib wldap32.lib ws2_32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static.lib"
-				AdditionalLibraryDirectories="$(CURL_HOME)\lib\LIB-Release"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(CURL_HOME)\lib\LIB-Release&quot;"
 				IgnoreDefaultLibraryNames=""
 			/>
 			<Tool
@@ -268,7 +268,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(CURL_HOME)\include&quot;"
+				AdditionalIncludeDirectories="..\include;..\..\..\core\include;&quot;$(BOOST_HOME)&quot;;&quot;$(CURL_HOME)\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;VTX_STATIC_LIB"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
@@ -292,7 +292,7 @@
 				AdditionalOptions="/IGNORE:4221 /IGNORE:4006"
 				AdditionalDependencies="libcurld.lib wldap32.lib ws2_32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_static_d.lib"
-				AdditionalLibraryDirectories="$(CURL_HOME)\lib\LIB-Debug"
+				AdditionalLibraryDirectories="&quot;$(BOOST_HOME)\lib&quot;;&quot;$(CURL_HOME)\lib\LIB-Debug&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
